Fix for broken header menu on small screen

--- a/docs/src/less/ds4/index.less
+++ b/docs/src/less/ds4/index.less
@@ -23,6 +23,7 @@ header[role="banner"] {
         span[role="img"] {
             background: url('http://ir.ebaystatic.com/rs/v/fxxj3ttftm5ltcqnto1o4baovyl.png?e') 0 117px;
             background-size: 190px;
+            display: inline-block;
             height: 37px;
             margin-right: 4px;
             margin-top: 1px;
